syntax = "proto3";
package pb;

//RPC
message RPCWriteUserFileRequest {
    string err = 1;
}

message RPCWriteUserFileResponse {
    string name = 1;
    bytes file = 2;
}

message RPCGetUserFileRequest {
    string name = 1;
}

message RPCGetUserFileResponse {
    string err = 1;
    bytes file = 2;
}

message RPCGetPublisherFileRequest {
    string name = 1;
}

message RPCGetPublisherFileResponse {
    string err = 1;
    bytes file = 2;
}